turtleart.circletwo.CircleTwo.scala.error
Compilation error:
CircleTwo:2: error: identifier expected but integer literal found.
  circle(radius : 2)
                  ^CircleTwo:3: error: ')' expected but '}' found.
} 
^