turtleart.circletwo.CircleTwo.scala.code
override def run() {
  circle(radius : 2)
}